# BDSup2SubPlusPlus

./: .clang-format  .gitignore  README.md  meson.build
src/: bdsup2sub++.pro  bdsup2sub.cpp  bdsup2sub.h  bdsup2sub.rc  colordialog.cpp  colordialog.h  conversiondialog.cpp  conversiondialog.h  editdialog.cpp  editdialog.h  editpane.cpp  editpane.h  framepalettedialog.cpp  framepalettedialog.h  libbdsup2sub++.pro  main.cpp  qxtcommandoptions.cpp  static-libbdsup2sub++.pro  types.h
src/Filters/: filterop.cpp  filterop.h
src/Subtitles/: bitmap.cpp  bitmap.h  imageobject.h  palette.cpp  palette.h  subdvd.cpp  subdvd.h  subpicture.h  subpicturebd.cpp  subpicturebd.h  subpicturedvd.cpp  subpicturedvd.h  subpicturexml.h  substreamdvd.cpp  substreamdvd.h  subtitleprocessor.cpp  subtitleprocessor.h  supbd.cpp  supbd.h  supdvd.cpp  supdvd.h  suphd.cpp  suphd.h  supxml.cpp  supxml.h
src/Tools/: bitstream.cpp  bitstream.h  filebuffer.h  numberutil.cpp  numberutil.h  quantizefilter.cpp  quantizefilter.h  timeutil.cpp  timeutil.h
